@@ -44,6 +44,7 @@ setup(
         'zc.table',
         'zdaemon',
         'zeit.connector>=0.13',
+        'zeit.objectlog',
         'zope.app.apidoc',
         'zope.app.catalog',
         'zope.app.component>=3.4.0b3',
@@ -52,6 +53,7 @@ setup(
         'zope.app.preference',
         'zope.app.securitypolicy',
         'zope.app.twisted',
+        'zope.i18n>3.4.0',
         'zope.location>=3.4.0b2',
         'zope.sendmail',
         'zope.xmlpickle',
